tests/requests/valid/005.http
GET /forums/1/topics/2375?page=1#posts-17408 HTTP/1.1\r\n
\r\n