tests/requests/invalid/version_01.http
GET /foo HTTP/0.99\r\n
\r\n
